fix(docs): update cmake build command to linux form

--- a/02.EnvironmentSetup/04.Linux_setup.md
+++ b/02.EnvironmentSetup/04.Linux_setup.md
@@ -166,7 +166,7 @@ cd vcpkg
 ```
 - Run the following command to bootstrap vcpkg:
     ```bash
-    bootstrap-vcpkg.bat
+    ./bootstrap-vcpkg.sh
     ```
 - This will build the vcpkg executable.
 - Confirm that you have access to the vcpkg executable by running the following command inside the `vcpkg` directory:
