fix(docs): update author of vscode extension "cmake" to reflect correct author
Fixes #5

--- a/02.EnvironmentSetup/04.Linux_setup.md
+++ b/02.EnvironmentSetup/04.Linux_setup.md
@@ -215,7 +215,7 @@ Visual Studio Code is a lightweight and powerful code editor that supports C++ d
       - Clangd (from LLVM)
       - CodeLLDB (from Vadim Chugunov)
   - CMake Tools (from Microsoft)
-  - CMake (from Microsoft)
+  - CMake (from twxs)
   - Other extesions I will be using in the course: 
     - Docker (Optional)
     - Dev Containers (Optional)
